Add Lombok integration and pagination endpoint for Task entity
Integrate Lombok annotations into Task model to reduce boilerplate and update Maven configuration for annotation processing. Refactor TaskController to use builder pattern and add paginated retrieval endpoint. Include HTTP request example for pagination.

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -76,6 +76,12 @@
       <groupId>jakarta.validation</groupId>
       <artifactId>jakarta.validation-api</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
   <build>
@@ -84,6 +90,18 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <configuration>
+          <annotationProcessorPaths>
+              <path>
+                  <groupId>org.projectlombok</groupId>
+                  <artifactId>lombok</artifactId>
+              </path>
+          </annotationProcessorPaths>
+      </configuration>
+  </plugin>
     </plugins>
   </build>
 
