Set server port to 3000; update HTTP request files; add validation to TaskController paging and implement getTask by id endpoint

--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=3000
+
 spring.datasource.url=jdbc:sqlite:target/tasks.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.hikari.maximum-pool-size=1
