Add Task entity, repository, and controller; implement task creation endpoint with validation

--- a/quarkus-app/src/main/resources/application.properties
+++ b/quarkus-app/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 quarkus.http.port=3000
 
 quarkus.datasource.db-kind=sqlite
-quarkus.datasource.jdbc.url=jdbc:sqlite:target/tasks.db
+quarkus.datasource.jdbc.url=jdbc:sqlite:./target/tasks.db
+quarkus.datasource.devservices.enabled=false
 
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
